# clover_rs

./: .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config.toml
src/: commons.rs  config.rs  handler.rs  main.rs  types.rs
src/commons/: mod.rs
src/commons/webapis/: fact.rs  mod.rs
src/modules/: bot_utils.rs  catify.rs  dictionary.rs  fun.rs  mod.rs
